--- a/index.html
+++ b/index.html
@@ -1,17 +1,216 @@
 <!DOCTYPE html>
 <html lang="en" class="overflow">
- <head>    
+ <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="libs/hamburgers-master/dist/hamburgers.min.css">
     <link rel="stylesheet" href="libs/mmenu/jquery.mmenu.all.css">
     <link rel="stylesheet" href="cssAd/bootstrap.min.css">
+    <link rel="stylesheet" href="libs/OwlCarousel2-2.2.1/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="cssAd/font-awesome.min.css">
     <link rel="stylesheet" href="cssAd/animate.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <title>Raccoons Assebmbly</title> 
+    <title>Raccoons Assebmbly</title>
  </head>
  <body>
+ <div id="page-preloader" class="preloader">
+     <div class="loader">
+
+     </div>
+ </div>
+ <div  class="my-page">
+    <div id="my-header">
+         <header id="main" class=" wow fadeInDown clearfix"  data-wow-delay="1.6s" data-wow-duration="1.5s">
+            <div class="logo">
+                <a href="#"><img src="img/logo.png" alt="Raccoons Assebmbly"></a>
+            </div>
+            <nav id="my-menu">
+                <ul >
+                    <li ><a href="#main">Main</a></li>
+                    <li><a href="#services">Our services</a></li>
+                    <li><a href="#reviews">Reviews</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#abilities">Abilities</a></li>
+                </ul>
+            </nav>
+         </header>
+         <a href="#my-menu" class="hamburger hamburger--spin" >
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </a>
+         <div class="my-header__img wow fadeInUp"  data-wow-delay="1.1s" data-wow-duration="2s">
+                <div class="my-header__img_txt">
+                    <h1 class="wow fadeInLeft"  data-wow-delay="1.6s" >Creative web development studio</h1>
+                    <h3 class="wow fadeInRight"  data-wow-delay="2.6s">-We make applications</h3>
+                </div>
+            </div>
+     </div>
+     <div id="my-content">
+         <section id="services">
+             <div class="services">
+                 <h2 class="wow fadeIn"  data-wow-offset="250" data-wow-duration="1s"><span >Our services</span></h2>
+                    <div class="services__content">
+                      <div class="services__content_img"></div>
+                       <div class="services__content_txt">
+
+                            <div id="b1" class="clearfix">
+                                <span>ui/ux</span>
+                                <p id="b1h" class="none">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, voluptate totam sunt suscipit repellendus aperiam.</p>
+                            </div>
+                            <div id="b2">
+                                <span>front-end</span>
+                                <p id="b2h" class="none">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde vitae veritatis explicabo perspiciatis, enim veniam.</p></div>
+                            <div id="b3">
+                                <span>back-end</span>
+                                <p id="b3h" class="none">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, aliquam. Debitis quae voluptatem minus earum.</p> </div>
+                           <div id="b4">
+                               <span>mobile apps</span>
+                               <p id="b4h" class="none">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore molestiae rem tempore. In, quasi, quas!</p>
+                            </div>
+                      </div>
+                    </div>
+             </div>
+         </section>
+     </div>
+     <section class="reviews" id="reviews">
+        <div id="prev_slide">
+             <i class="fa fa-chevron-left" aria-hidden="true"></i></div>
+         <div id="next_slide">
+             <i class="fa fa-chevron-right" aria-hidden="true"></i></div>
+         <h2 class="wow fadeIn"  data-wow-offset="250" data-wow-duration="1s"><span>Reviews</span></h2>
+         <div class="owl-carousel">
+             <div class="slide s1">
+                 <div class="slide-wrap clearfix">
+                     <div class="person__name">
+                        <i class="fa fa-quote-left" aria-hidden="true"></i>
+                        <p>Hachu Pit`</p>
+                        <p class="person__name_desc">Prinesite mne vodichki blat`</p>
+                     </div>
+                     <div class="person__photo p1"></div>
+                     <div class="person__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla aliquid, vel iste, error saepe repellendus, impedit magni voluptate, quis possimus earum facilis ab. Vero, voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, dolor!</div>
+                 </div>
+             </div>
+             <div class="slide s2">
+                 <div class="slide-wrap clearfix">
+                     <div class="person__name">
+                        <i class="fa fa-quote-left" aria-hidden="true"></i>
+                        <p>Nano Hyto</p>
+                        <p class="person__name_desc">Prinesite mne vodichki blat`</p>
+                     </div>
+                     <div class="person__photo p2"></div>
+                     <div class="person__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla aliquid, vel iste, error saepe repellendus, impedit magni voluptate, quis possimus earum facilis ab. Vero, voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, dolor!</div>
+                 </div>
+             </div>
+             <div class="slide s3">
+                 <div class="slide-wrap clearfix">
+                     <div class="person__name">
+                        <i class="fa fa-quote-left" aria-hidden="true"></i>
+                        <p>Don Trump</p>
+                        <p class="person__name_desc">Prinesite mne vodichki blat`</p>
+                     </div>
+                     <div class="person__photo p3"></div>
+                     <div class="person__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla aliquid, vel iste, error saepe repellendus, impedit magni voluptate, quis possimus earum facilis ab. Vero, voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, dolor!</div>
+                 </div>
+             </div>
+             <div class="slide s4">
+                 <div class="slide-wrap clearfix">
+                     <div class="person__name">
+                        <i class="fa fa-quote-left" aria-hidden="true"></i>
+                        <p>Jon Snow</p>
+                        <p class="person__name_desc">Prinesite mne vodichki blat`</p>
+                     </div>
+                     <div class="person__photo p4"></div>
+                     <div class="person__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla aliquid, vel iste, error saepe repellendus, impedit magni voluptate, quis possimus earum facilis ab. Vero, voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, dolor!</div>
+                 </div>
+             </div>
+             <div class="slide s5">
+                 <div class="slide-wrap clearfix">
+                     <div class="person__name">
+                        <i class="fa fa-quote-left" aria-hidden="true"></i>
+                        <p>Shluha whoe</p>
+                        <p class="person__name_desc">Prinesite mne vodichki blat`</p>
+                     </div>
+                     <div class="person__photo p5"></div>
+                     <div class="person__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla aliquid, vel iste, error saepe repellendus, impedit magni voluptate, quis possimus earum facilis ab. Vero, voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, dolor!</div>
+                 </div>
+             </div>
+             <div class="slide s6">
+                 <div class="slide-wrap clearfix">
+                     <div class="person__name">
+                        <i class="fa fa-quote-left" aria-hidden="true"></i>
+                        <p>Last one</p>
+                        <p class="person__name_desc">Prinesite mne vodichki blat`</p>
+                     </div>
+                     <div class="person__photo p6"></div>
+                     <div class="person__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla aliquid, vel iste, error saepe repellendus, impedit magni voluptate, quis possimus earum facilis ab. Vero, voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, dolor!</div>
+                 </div>
+             </div>
+         </div>
+     </section>
+     <div class="addReview"><a href="#">Add a review >></a></div>
+     <section class="wedid" id="portfolio">
+         <h2 class="wow fadeIn"   data-wow-offset="250" data-wow-duration="1s"><span>What we did</span></h2>
+         <div class="wedid__wrap">
+             <img src="img/w1.jpg" alt="">
+             <img src="img/w2.jpg" alt="" >
+             <img src="img/w3.jpg" alt="" >
+             <img src="img/w4.jpg" alt="" >
+             <img src="img/w5.jpg" alt="" >
+         </div>
+     </section>
+     <section class="icons" id="abilities">
+        <h2 class="wow fadeIn"   data-wow-offset="250" data-wow-duration="1s"><span>Our abilities</span></h2>
+         <div class="icons__wrap">
+             <div class="icon">
+                <i class="fa fa-folder-open fa-3x" aria-hidden="true"></i>
+                <p class="services__h">Web & App Design</p>
+                <p class="services__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad ut cum non possimus nesciunt!
+                </p>
+               <hr class="services__hr">
+             </div>
+             <div class="icon">
+                <i class="fa fa-database fa-3x" aria-hidden="true"></i>
+                <p class="services__h">Web & App Design</p>
+                <p class="services__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad ut cum non possimus nesciunt!
+                </p>
+               <hr class="services__hr">
+             </div>
+             <div class="icon">
+                <i class="fa fa-cog fa-3x" aria-hidden="true"></i>
+                <p class="services__h">Web & App Design</p>
+                <p class="services__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad ut cum non possimus nesciunt!
+                </p>
+               <hr class="services__hr">
+             </div>
+         </div>
+     </section>
+
+     <div id="my-footer">
+         <footer class="wow fadeInUp"  data-wow-offset="100" data-wow-duration="1.2s">
+            <p>We need you</p>
+            <div class="wow fadeInRight"  data-wow-delay="1.2s" data-wow-offset="50" data-wow-duration="1.2s"><a href="#">hire us</a></div>
+            <p  class="wow fadeInLeft"  data-wow-delay="1.2s" data-wow-offset="50" data-wow-duration="1.2s">
+                <a class='fa fa-envelope' href='#/' ></a>
+                <a class='fa fa-vk' href='#/'></a>
+                <a class='fa fa-facebook' href='#/'></a>
+            </p>
+         </footer>
+     </div>
+ </div>
+
+
+
+ <script  src="js/jquery.js"></script>
+ <script src="js/main.js"></script>
+ <script src="libs/parallax.js-1.4.2/parallax.min.js"></script>
+ <script src="libs/mmenu/jquery.mmenu.all.js"></script>
+ <script  src="js/bootstrap.min.js"></script>
+ <script src="libs/typed.js-master/lib/typed.min.js"></script>
+ <script  src="libs/OwlCarousel2-2.2.1/dist/owl.carousel.min.js"></script>
+ <script  src="js/wow.min.js"></script>
+ <script>
+   new WOW().init();
+ </script>
  </body>
- 
