--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="libs/hamburgers-master/dist/hamburgers.min.css">
     <link rel="stylesheet" href="libs/mmenu/jquery.mmenu.all.css">
     <link rel="stylesheet" href="cssAd/bootstrap.min.css">
-    <link rel="stylesheet" href="libs/OwlCarousel2-2.2.1/dist/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="cssAd/font-awesome.min.css">
     <link rel="stylesheet" href="cssAd/animate.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <title>Raccoons Assebmbly</title>
+    <title>Raccoons Assembly</title>
  </head>
  <body>
  <div id="page-preloader" class="preloader">
@@ -208,8 +208,8 @@
  <script src="libs/mmenu/jquery.mmenu.all.js"></script>
  <script  src="js/bootstrap.min.js"></script>
  <script src="libs/typed.js-master/lib/typed.min.js"></script>
- <script  src="libs/OwlCarousel2-2.2.1/dist/owl.carousel.min.js"></script>
- <script  src="js/wow.min.js"></script>
+ <script  src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js"></script>
+ <script  src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
  <script>
    new WOW().init();
  </script>
